# briar

./: .gitignore  CLAUDE.md  Dockerfile  LICENSE  MANIFEST.in  README.md  briar.sh  docker-compose.yml  package.json  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yml  test.yml
briar/: __init__.py  __main__.py  cli.py  config.py  web.py  worker.py
briar/agents/: __init__.py  analyzer.py  api.py  auth.py  authz.py  csrf.py  cve.py  gitbackup.py  injection.py  jwt.py  planner.py  rce.py  recon.py  secrets.py  ssrf.py  traversal.py  upload.py  xss.py
briar/charts/: generator.py
briar/core/: __init__.py  animation.py  diff.py  http.py  params.py  validator.py  workspace.py
briar/exploits/: __init__.py  browser.py
briar/providers/: __init__.py  anthropic.py  custom.py  deepseek.py  google.py  groq.py  mistral.py  ollama.py  openai.py  openrouter.py  together.py  xai.py
briar/reports/: generator.py  html_report.py  obsidian.py
briar/slides/: pptx_gen.py
briar/static/: style.css
briar/templates/: home.html  scan_detail.html
